# vulcan-codekit

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  dependencies.yaml  skill.yaml
.github/workflows/: release.yml  validate.yml
ast-grep-ffi/: Cargo.toml  deny.toml
ast-grep-ffi/src/: lib.rs
docs/completed/20260426/: 01-SYNC_CODEKIT_AST_GREP_FFI.md  02-RELEASE_WORKFLOW_SPLIT.md
help/: ast-detail.md  markdown-menu.md  node-source.md  patch.md  rg.md  tree.md  vulcan_codekit_skill.lua
overflow_templates/: overflow_page.md  overflow_truncate.md
rules/: bash.yml  c.yml  cpp.yml  csharp.yml  css.yml  elixir.yml  go.yml  haskell.yml  hcl.yml  html.yml  java.yml  javascript.yml  json.yml  kotlin.yml  lua.yml  nix.yml  php.yml  python.yml  ruby.yml  rust.yml  scala.yml  solidity.yml  swift.yml  tsx.yml  typescript.yml  yaml.yml
runtime/: codekit-ast-detail.lua  codekit-ast-tree.lua  codekit-markdown-menu.lua  codekit-node-source.lua  codekit-patch.lua  codekit-rg.lua  shared_length.lua
scripts/: generate_cargo_deny_notices.py  package_ffi.py  package_skill.py  tag_release.ps1  tag_release.sh  validate_skill.py
skills/: SKILL.md
skills/agents/: openai.yaml
