[package]
name = "vulcan-codekit-ast-grep-ffi"
version = "0.1.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "vulcan_codekit_ast_grep_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
ast-grep-config = "0.42.1"
ast-grep-core = { version = "0.42.1", features = ["tree-sitter"] }
ast-grep-language = "0.42.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
